RESOLVED FIXED93384
Evolution, empathy no longer build with webkint 1.9.6: webkit_dom_html_element_set_class_name is gone
https://bugs.webkit.org/show_bug.cgi?id=93384
Summary Evolution, empathy no longer build with webkint 1.9.6: webkit_dom_html_eleme...
David Ronis
Reported 2012-08-07 12:23:52 PDT
I'm trying to upgrade evolution(git/master) and/or empathy-3.5.5 after upgrading webkit to 1.9.6 (from 1.9.5). The builds die with things like: CC libemiscwidgets_la-e-web-view.lo e-web-view.c: In function 'web_view_update_document_highlights': e-web-view.c:472:3: error: implicit declaration of function 'webkit_dom_html_element_set_class_name' [-Werror=implicit-function-declaration] e-web-view.c:472:3: warning: nested extern declaration of 'webkit_dom_html_element_set_class_name' [-Wnested-externs] cc1: some warnings being treated as errors
Attachments
Patch (1.49 KB, patch)
2012-08-07 16:17 PDT, Erik Arvidsson
no flags
Provide again accessors for className (5.16 KB, patch)
2012-08-08 07:05 PDT, Xan Lopez
no flags
Alexey Proskuryakov
Comment 1 2012-08-07 15:55:40 PDT
The API moved from HTMLElement to Element in bug 93014.
Erik Arvidsson
Comment 2 2012-08-07 15:58:33 PDT
Fix coming.
Erik Arvidsson
Comment 3 2012-08-07 15:59:53 PDT
This is the GTK/GObject bindings. Right?
Erik Arvidsson
Comment 4 2012-08-07 16:17:34 PDT
WebKit Review Bot
Comment 5 2012-08-07 18:46:59 PDT
Comment on attachment 157036 [details] Patch Clearing flags on attachment: 157036 Committed r124966: <http://trac.webkit.org/changeset/124966>
WebKit Review Bot
Comment 6 2012-08-07 18:47:03 PDT
All reviewed patches have been landed. Closing bug.
Xan Lopez
Comment 7 2012-08-08 05:39:32 PDT
I think this fix is wrong. The GObject bindings *do* have inheritance, but the C accessors for a property do not automagically appear in all subclasses, only in the one where the property is initially defined. So if Element has 'class-name', you get: webkit_dom_element_get_class_name but not webkit_dom_html_element_get_class_name being HTMLElement a subclass of Element. What you can do, in any class, is: g_object_get (element, 'class-name', &name, NULL) for any element in the hierarchy. By adding the property twice in the class hierarchy we are just going to mess things up, the right fix is: - Remove this patch. - Add a custom accessor for 'class-name' in the HTMLElement GObject wrapper in Source/WebCore/bindings/gobject/WebKitDOMCustom.[cpp,h], that just forwards to the accessor in Element. I can do this.
Xan Lopez
Comment 8 2012-08-08 07:05:42 PDT
Created attachment 157209 [details] Provide again accessors for className Something like this should do the trick.
WebKit Review Bot
Comment 9 2012-08-08 07:09:00 PDT
Attachment 157209 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/bindings/gobject/WebKitDOMCustom.h:33: The parameter name "element" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/bindings/gobject/WebKitDOMCustom.h:34: The parameter name "element" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Barth
Comment 10 2012-08-08 08:15:25 PDT
Comment on attachment 157209 [details] Provide again accessors for className ok
WebKit Review Bot
Comment 11 2012-08-08 11:34:23 PDT
Comment on attachment 157209 [details] Provide again accessors for className Clearing flags on attachment: 157209 Committed r125056: <http://trac.webkit.org/changeset/125056>
WebKit Review Bot
Comment 12 2012-08-08 11:34:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.